--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.4
   intro_slider: ^4.2.0
   url_launcher: ^6.1.6
+  sticky_headers: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
   assets:
     - lang/
     - assets/images/
+    - assets/mok_data/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
